Fix about styling
Some things from 3ace4b4211b7874c5e14f2921311dbc5ac1cd70f are messed up

--- a/assets/css/critical.css
+++ b/assets/css/critical.css
@@ -118,12 +118,13 @@ button {
 
 .aboutme {
 	padding: 1rem;
+	max-width: 50rem;
 }
 
 .about {
 	display: flex;
 	flex-direction: row;
-	align-items: center;
+	justify-content: center;
 	padding: 0 5rem;
 }
 
